<resources>
    <string name="app_name">Hw_8</string>
    <string name="company_name">Shoppo</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nrc">NRC</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_screen_msg_one">Fill up this form to become to get started.</string>
    <string name="welcome">Welcome,</string>
    <string name="get_started">Get Started,</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="products">Products</string>
    <string name="settings">Settings</string>
    <string name="your_details">Your Details,</string>
    <string name="update">Update</string>
    <string name="bought_price">Bought: %s MMK</string>
    <string name="sold_price">Sold: %s MMK</string>
    <string name="be_specific">Be specific,</string>
    <string name="what_kind_of_product_are_you_adding">What kind of product are you adding?</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="remaining_quantity">Remaining Quantity</string>
    <string name="bought_price_hint">Bought Price</string>
    <string name="sold_price_hint">Sold Price</string>
    <string name="add_product">Add Product</string>
    <string name="staff_product_screen_message">These are the products you and your colleagues have added.</string>
    <string name="welcome_current_staff">Welcome back %s,</string>
    <string name="product_id_suffix">#%d</string>
    <string name="welcome_back_admin">Welcome back Admin,</string>
    <string name="admin_staff_list_screen_message">Manage the business\'s staff members.</string>
    <string name="staff_email_underlined"><u>%s</u></string>
    <string name="new_staff">New Staff,</string>
    <string name="current_staff">Current Staff,</string>
    <string name="admin_add_staff_screen_message">Add a new member to the business team.</string>
    <string name="admin_update_staff_screen_message">Make a change to this staff\'s credentials.</string>
    <string name="add_new_staff">Add New Staff</string>
    <string name="admin_product_list_screen_message">These are the products the staff members have added.</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_staff_added_yet">No staff added yet!</string>
    <string name="admin_sales_record_list_screnn_message">Check out what the business has already sold.</string>
    <string name="no_sales_records_yet">No sales records yet!</string>
    <string name="approved_by_placeholder">Approved By: Staff <i>#%d</i></string>
    <string name="product_type_qty_placeholder">%d Products</string>
    <string name="price_suffix">%s MMK</string>
    <string name="cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_your_cart">In your cart,</string>
    <string name="add_to_sales_record_btn">Add To Sales Record</string>
    <string name="subtotal_price">Subtotal Price:</string>
    <string name="discount">Discount:</string>
    <string name="tax">Tax:</string>
    <string name="total_price">Total Price:</string>
    <string name="staff_cart_screen_empty_message">No products found in your cart!</string>
    <string name="admin_invoice_placeholder">Invoice #%d,</string>
    <string name="delete_sales_record">Delete Sales Record</string>
    <string name="quantity_placeholder">Qty: %d</string>
    <string name="discount_price_placeholder">- %s MMK</string>
</resources>