<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vecteezy_primary_bg"
    tools:context=".ui.admin.AdminAddStaffActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_back_arrow"
        app:tint="@color/dark_brown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNewOrCurrentStaff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:fontFamily="@font/lemonada"
            android:text="@string/new_staff"
            android:textColor="@color/dark_brown"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAddOrUpdateScreenMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/maven_pro_medium"
            android:text="@string/admin_add_staff_screen_message"
            android:textColor="@color/dark_brown"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="40dp"
            android:hint="@string/name"
            android:textColorHint="@color/dark_brown"
            app:startIconDrawable="@drawable/ic_name"
            app:startIconTint="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/overlock"
                android:inputType="textPersonName"
                android:textColor="@color/dark_brown" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:textColorHint="@color/dark_brown"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/overlock"
                android:inputType="textEmailAddress"
                android:textColor="@color/dark_brown" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:src="@drawable/ic_gender"
                app:tint="@color/dark_brown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/overlock"
                android:text="@string/gender"
                android:textColor="@color/dark_brown"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/dark_brown"
                    android:checked="true"
                    android:fontFamily="@font/overlock"
                    android:text="@string/male"
                    android:textColor="@color/dark_brown"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:buttonTint="@color/dark_brown"
                    android:fontFamily="@font/overlock"
                    android:text="@string/female"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioOthers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:buttonTint="@color/dark_brown"
                    android:fontFamily="@font/overlock"
                    android:text="@string/others"
                    android:textSize="16sp" />

            </RadioGroup>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldNrc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:hint="@string/nrc"
            android:textColorHint="@color/dark_brown"
            app:startIconDrawable="@drawable/ic_nrc"
            app:startIconTint="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/overlock"
                android:inputType="text"
                android:textColor="@color/dark_brown" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/dark_brown"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_brown"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/overlock"
                android:inputType="textPassword"
                android:textColor="@color/dark_brown" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/dark_brown"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_brown"
            app:startIconDrawable="@drawable/ic_confirm_password"
            app:startIconTint="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/overlock"
                android:inputType="textPassword"
                android:textColor="@color/dark_brown" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddNewStaff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/primary_btn_bg"
            android:text="@string/add_new_staff"
            android:textColor="@color/light_brown" />

    </LinearLayout>

</RelativeLayout>