<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vecteezy_primary_bg"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_company_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cinzel_bold"
            android:text="@string/company_name"
            android:textSize="32sp"
            android:textColor="@color/dark_brown"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:fontFamily="@font/lemonada"
            android:text="@string/welcome"
            android:layout_marginTop="40dp"
            android:textColor="@color/dark_brown"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="14dp"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/dark_brown"
            android:hint="@string/your_email"
            android:textColorHint="@color/dark_brown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/overlock"
                android:textColor="@color/dark_brown"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="14dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_brown"
            android:hint="@string/your_password"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/dark_brown"
            android:textColorHint="@color/dark_brown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/overlock"
                android:textColor="@color/dark_brown"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/primary_btn_bg"
            android:textColor="@color/light_brown"
            android:layout_marginHorizontal="14dp"
            android:text="@string/login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="14dp"
            android:textColor="@color/dark_brown"
            android:background="@drawable/secondary_btn_bg"
            android:text="@string/register" />

    </LinearLayout>

</RelativeLayout>