<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vecteezy_primary_bg"
    tools:context=".ui.admin.AdminAddProductActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_back_arrow"
        app:tint="@color/dark_brown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:fontFamily="@font/lemonada"
            android:text="@string/be_specific"
            android:textColor="@color/dark_brown"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/maven_pro_medium"
            android:text="@string/what_kind_of_product_are_you_adding"
            android:textColor="@color/dark_brown"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="40dp"
            android:hint="@string/name"
            android:textColorHint="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/overlock"
                android:inputType="text"
                android:textColor="@color/dark_brown" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldTotalQty"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:hint="@string/total_quantity"
            android:textColorHint="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/overlock"
                android:inputType="number"
                android:textColor="@color/dark_brown" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldRemainingQty"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:hint="@string/remaining_quantity"
            android:textColorHint="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/overlock"
                android:inputType="number"
                android:textColor="@color/dark_brown" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldBoughtPrice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:hint="@string/bought_price_hint"
            android:textColorHint="@color/dark_brown"
            app:suffixText="MMK"
            app:suffixTextColor="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/overlock"
                android:inputType="numberDecimal"
                android:textColor="@color/dark_brown" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldSoldPrice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:hint="@string/sold_price_hint"
            android:textColorHint="@color/dark_brown"
            app:suffixText="MMK"
            app:suffixTextColor="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/overlock"
                android:inputType="numberDecimal"
                android:textColor="@color/dark_brown" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/primary_btn_bg"
            android:text="@string/add_product"
            android:textColor="@color/light_brown" />

    </LinearLayout>

</RelativeLayout>